--- a/index.html
+++ b/index.html
@@ -10,10 +10,7 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="">
-        <script type="text/javascript" src="/node_modules/jquery/dist/jquery.js"></script>
-        <script type="text/javascript" src="/node_modules/chariot-tooltips/release/chariot.js"></script>
-        <link rel="stylesheet" type="text/css" href="/node_modules/chariot-tooltips/release/chariot.css">
-        <link rel="stylesheet" type="text/css" href="/node_modules/chariot-tooltips/example/example-tooltip.css">
+
         <h1 style="text-align: center">The only tutorial you need</h1>
     </head>
     <body>
@@ -24,6 +21,6 @@
         <br>
         <div id='second' style="width: 300px">Element two is a complex one</div>
         
-        <script src="main.js" async defer></script>
+        <script src="build/main.js"></script>
     </body>
 </html>
